--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionList.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionList.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  overflow: scroll;
+  overflow: auto;
 
   .header {
     display: flex;
