suggestion card font

--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
@@ -80,6 +80,7 @@
       .buttonWrapper {
         display: flex;
         gap: 8px;
+        font-size: 14px !important;
 
         .buttonIcon {
           width: 16px;
