--- a/src/components/CopyWriting/CopyWritingEditor/CopyWritingEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/CopyWritingEditor.scss
@@ -19,6 +19,11 @@ $copy-writing-space: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 150% */
+    height: 32px;
+
+    img{
+      height: 32px;
+    }
   }
 
   .hideGenerateOptionEditor {
