--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
@@ -66,10 +66,15 @@
     align-items: center;
 
     .checked {
-      width: 15px;
-      height: 15px;
+      width: 13px;
+      height: 13px;
       background-color: #6941FF;
-      border-radius: 4px;
+      border-radius: 2px;
+
+      img{
+        width: 13px;
+        height: 13px;
+      }
     }
   }
 }
