--- a/src/components/GenieTheme/GenieThemeHeader/GenieThemeHeader.scss
+++ b/src/components/GenieTheme/GenieThemeHeader/GenieThemeHeader.scss
@@ -14,13 +14,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 150% */
+    height: 32px;
 
-    .title {
-      color: #000;
-    }
-
-    .subtitle {
-      color: #6E7494;
+    img{
+      height: 32px;
     }
   }
 
